# Car-Price-ML-System

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
reports/: model_summary.json  train_summary.json
src/car_price_prediction/: api.py  config.py  config.yaml  loader.py  logger.py  main.py  predict.py  train.py
src/car_price_prediction/database/: connection.py  models.py  repository.py
src/car_price_prediction/pipeline/: evaluate.py  features.py  preprocess.py  train_model.py
src/car_price_prediction/static/: car-about.css  car-about.html  index.html  script.js  styles.css
tests/: test_api_unit.py  test_loader_unit.py  test_predict_unit.py  test_repository_unit.py
tests/Integration/: test_mysql.py
